--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Adoption Platform</title>
+    <link rel="icon" href="/img/favicon-32x32.ico">
   </head>
   <body>
     <div id="root"></div>
