--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="/nagishli_v3_beta/nagishli_beta.js" charset="utf-8" defer></script>
+    <script>
+      nagishli_config = {
+        language: "en",
+        color: "Gray"
+
+      };
+      </script>
   </body>
 </html>
